edit: change title to 'Inabel.ID'

--- a/index-api.html
+++ b/index-api.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inabel Pattern Identifier - API Version</title>
+    <title>Inabel.ID</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
@@ -12,7 +12,7 @@
         <header class="header">
             <h1 class="title">
                 <i class="bi bi-palette"></i>
-                Inabel Pattern Identifier
+                Inabel.ID
             </h1>
             <p class="subtitle">Traditional Ilocano Textile Pattern Recognition System</p>
             <div class="badge">
